Increase allocated memory